--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
-body{
+html, body {
+    height: 100%;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+body {
     max-width: 1200px;
+    width: 100%;
     min-width: 400px;
 }
 
